force-app/main/default/objects/Product__c/Product__c.object-meta.xml
<CustomObject>
    <description>A description</description>
    <label>Swag</label>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Swag</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>