force-app/main/default/objects/Product__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Stores description of a Swag item</description>
    <inlineHelpText>Describe the swag item in not more than 1,000 characters</inlineHelpText>
    <label>Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>