force-app/main/default/objects/Product__c/fields/foo__c.field-meta.xml
<CustomField>
    <fullName>foo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>foo</label>
    <type>Checkbox</type>
</CustomField>