force-app/main/default/objects/Product__c/fields/Material__c.field-meta.xml
<CustomField>
    <fullName>Material__c</fullName>
    <inlineHelpText>Choose the material this swag item is made of</inlineHelpText>
    <label>Material</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Metal</fullName>
            </value>
            <value>
                <fullName>Cotton</fullName>
            </value>
            <value>
                <fullName>Enamel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>