force-app/main/default/objects/Product__c/fields/Picture_URL__c.field-meta.xml
<CustomField>
    <fullName>Picture_URL__c</fullName>
    <inlineHelpText>Paste a publicly reachable URL of a jpg or png image, including http(s)://</inlineHelpText>
    <label>Picture URL</label>
    <type>Url</type>
</CustomField>