force-app/main/default/objects/Product__c/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Group products in families, serving as categories</description>
    <label>Product Family</label>
    <referenceTo>Product_Family__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>